--- a/rag_from_scratch_01_to_04.ipynb
+++ b/rag_from_scratch_01_to_04.ipynb
@@ -18,60 +18,46 @@
     "\n",
     "![Screenshot 2024-03-25 at 8.30.33 PM.png](attachment:c566957c-a8ef-41a9-9b78-e089d35cf0b7.png)\n",
     "\n",
-    "## Enviornment\n",
+    "## Environment\n",
     "\n",
     "`(1) Packages`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3a88555a-53a5-4ab8-ba3d-e6dd3a26c71a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pip install langchain_community tiktoken langchain-openai langchainhub chromadb langchain"
+    "# ! pip install langchain_community chromadb langchain langchain_ollama"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "75a8ab66-8477-429f-bbbe-ba439322d085",
+   "id": "37ea2428",
    "metadata": {},
    "source": [
-    "`(2) LangSmith`\n",
+    "`(2) Local model`\n",
     "\n",
-    "https://docs.smith.langchain.com/"
+    "- Install [Ollama](https://ollama.com/)\n",
+    "- Run:\n",
+    "```bash\n",
+    "ollama serve  # start the service on http://127.0.0.1:11434\n",
+    "ollama pull deepseek-r1  # download a model\n",
+    "ollama run deepseek-r1  # run the model\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b76f68a8-4745-4377-8057-6090b87377d1",
+   "execution_count": 2,
+   "id": "eebf3d45",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.environ['LANGCHAIN_TRACING_V2'] = 'true'\n",
-    "os.environ['LANGCHAIN_ENDPOINT'] = 'https://api.smith.langchain.com'\n",
-    "os.environ['LANGCHAIN_API_KEY'] = <your-api-key>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f8eb312d-8a07-4df3-8462-72ac526715f7",
-   "metadata": {},
-   "source": [
-    "`(3) API Keys`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df28175e-24b6-4939-8a3c-5a1f9511f51e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.environ['OPENAI_API_KEY'] = <your-api-key>"
+    "import os \n",
+    "os.environ[\"USER_AGENT\"] = \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/38.0.101.76 Safari/537.36\""
    ]
   },
   {
@@ -86,8 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "98070313-0c2f-4ba6-ae3e-79e2418ce4df",
+   "execution_count": 3,
+   "id": "228f8470",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,9 +84,23 @@
     "from langchain_community.vectorstores import Chroma\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.runnables import RunnablePassthrough\n",
-    "from langchain_openai import ChatOpenAI, OpenAIEmbeddings\n",
+    "from langchain_ollama import ChatOllama, OllamaEmbeddings\n",
     "\n",
+    "# NOTE: change this if you are hosting ollama on a different address or port\n",
+    "BASE_URL = \"http://localhost:11434/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9cf8d895",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#### INDEXING ####\n",
+    "\n",
+    "# NOTE: This part where the document is retrieved from a url is the only one requiring an internet connection.\n",
+    "# After running this cell, you can turn off your internet connection (as long as you have your model hosted locally).\n",
     "\n",
     "# Load Documents\n",
     "loader = WebBaseLoader(\n",
@@ -111,25 +111,74 @@
     "        )\n",
     "    ),\n",
     ")\n",
+    "\n",
     "docs = loader.load()\n",
+    "\n",
     "\n",
     "# Split\n",
     "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=200)\n",
-    "splits = text_splitter.split_documents(docs)\n",
+    "splits = text_splitter.split_documents(docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98070313-0c2f-4ba6-ae3e-79e2418ce4df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Embed\n",
     "vectorstore = Chroma.from_documents(documents=splits, \n",
-    "                                    embedding=OpenAIEmbeddings())\n",
+    "                                    embedding=OllamaEmbeddings(\n",
+    "                                        model=\"deepseek-r1\",\n",
+    "                                        base_url=BASE_URL\n",
+    "                                    ))\n",
     "\n",
-    "retriever = vectorstore.as_retriever()\n",
+    "retriever = vectorstore.as_retriever()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "46e64015",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# type(prompt)\n",
+    "from langchain.prompts import ChatPromptTemplate, HumanMessagePromptTemplate, PromptTemplate\n",
     "\n",
+    "prompt = ChatPromptTemplate([\n",
+    "    HumanMessagePromptTemplate(\n",
+    "        prompt=PromptTemplate(\n",
+    "            template=\"You are an assistant for question-answering tasks. Use the following pieces of retrieved context to answer the question. If you don't know the answer, just say that you don't know. Use three sentences maximum and keep the answer concise.\\nQuestion: {question} \\nContext: {context} \\nAnswer:\",\n",
+    "            input_variables=[\"context\", \"question\"]\n",
+    "        )\n",
+    "    )    \n",
+    "])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5511cfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6dc10dd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#### RETRIEVAL and GENERATION ####\n",
     "\n",
-    "# Prompt\n",
-    "prompt = hub.pull(\"rlm/rag-prompt\")\n",
-    "\n",
     "# LLM\n",
-    "llm = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0)\n",
+    "llm = ChatOllama(model=\"deepseek-r1\", temperature=0)\n",
     "\n",
     "# Post-processing\n",
     "def format_docs(docs):\n",
@@ -144,7 +193,17 @@
     ")\n",
     "\n",
     "# Question\n",
-    "rag_chain.invoke(\"What is Task Decomposition?\")"
+    "response = rag_chain.invoke(\"What is Task Decomposition?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a21bd4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(response)"
    ]
   },
   {
@@ -164,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "edd7beeb-21fa-4f4b-b8fa-5a4f70489a16",
    "metadata": {},
    "outputs": [],
@@ -183,21 +242,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df119cca-1676-4caa-bad4-11805d69e616",
+   "cell_type": "markdown",
+   "id": "718b8d10",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import tiktoken\n",
+    "The tokenization is handled internally by Ollama, so it is not necessary.\n",
+    "If for some reasons you need to know the number of tokens, that depends on the model you are running.\n",
     "\n",
-    "def num_tokens_from_string(string: str, encoding_name: str) -> int:\n",
-    "    \"\"\"Returns the number of tokens in a text string.\"\"\"\n",
-    "    encoding = tiktoken.get_encoding(encoding_name)\n",
-    "    num_tokens = len(encoding.encode(string))\n",
-    "    return num_tokens\n",
+    "Most open-source models, including DeepSeek, rely on HuggingFace's AutoTokenizer to train their tokenizer and can be found at https://huggingface.co/\n",
     "\n",
-    "num_tokens_from_string(question, \"cl100k_base\")"
+    "Example (DeepSeek-R1): https://huggingface.co/deepseek-ai/DeepSeek-R1 \n",
+    "\n",
+    "After installing Huggingface's [transformers](https://huggingface.co/docs/transformers/en/installation) library, run:\n",
+    "\n",
+    "```python\n",
+    "from transformers import AutoTokenizer\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"deepseek-ai/DeepSeek-R1 \")\n",
+    "tokens = tokenizer(\"your input text here\")\n",
+    "```"
    ]
   },
   {
@@ -215,8 +277,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_openai import OpenAIEmbeddings\n",
-    "embd = OpenAIEmbeddings()\n",
+    "from langchain_ollama import OllamaEmbeddings\n",
+    "embd = OllamaEmbeddings(model=\"deepseek-r1\", base_url=BASE_URL)\n",
     "query_result = embd.embed_query(question)\n",
     "document_result = embd.embed_query(document)\n",
     "len(query_result)"
@@ -227,7 +289,7 @@
    "id": "f5e0e35f-6861-4c5e-9301-04fd5408f8f8",
    "metadata": {},
    "source": [
-    "[Cosine similarity](https://platform.openai.com/docs/guides/embeddings/frequently-asked-questions) is reccomended (1 indicates identical) for OpenAI embeddings."
+    "[Cosine similarity](https://platform.openai.com/docs/guides/embeddings/frequently-asked-questions) is recommended (1 indicates identical) for OpenAI embeddings."
    ]
   },
   {
@@ -317,16 +379,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "baa90aaf-cc1b-46a1-9fba-cf20804dcb41",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Index\n",
-    "from langchain_openai import OpenAIEmbeddings\n",
+    "from langchain_ollama import OllamaEmbeddings\n",
     "from langchain_community.vectorstores import Chroma\n",
     "vectorstore = Chroma.from_documents(documents=splits, \n",
-    "                                    embedding=OpenAIEmbeddings())\n",
+    "                                    embedding=OllamaEmbeddings(\n",
+    "                                        model='deepseek-r1',\n",
+    "                                        base_url=BASE_URL\n",
+    "                                    ))\n",
     "\n",
     "retriever = vectorstore.as_retriever()"
    ]
@@ -341,16 +406,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "fafdada1-4c4e-41f8-ad1a-33861aae3930",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Index\n",
-    "from langchain_openai import OpenAIEmbeddings\n",
+    "from langchain_ollama import OllamaEmbeddings\n",
     "from langchain_community.vectorstores import Chroma\n",
     "vectorstore = Chroma.from_documents(documents=splits, \n",
-    "                                    embedding=OpenAIEmbeddings())\n",
+    "                                    embedding=OllamaEmbeddings(\n",
+    "                                        model='deepseek-r1',\n",
+    "                                        base_url=BASE_URL\n",
+    "                                    ))\n",
     "\n",
     "\n",
     "retriever = vectorstore.as_retriever(search_kwargs={\"k\": 1})"
@@ -398,7 +466,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_ollama import ChatOllama\n",
     "from langchain.prompts import ChatPromptTemplate\n",
     "\n",
     "# Prompt\n",
@@ -414,18 +482,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "e4461264-5cac-479a-917c-9bf589826da4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# LLM\n",
-    "llm = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0)"
+    "llm = ChatOllama(model=\"deepseek-r1\", temperature=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "55d6629f-18ec-4372-a557-b254fbb1dd2d",
    "metadata": {},
    "outputs": [],
@@ -442,18 +510,35 @@
    "outputs": [],
    "source": [
     "# Run\n",
-    "chain.invoke({\"context\":docs,\"question\":\"What is Task Decomposition?\"})"
+    "response = chain.invoke({\"context\":docs,\"question\":\"What is Task Decomposition?\"})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f9a8e7a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "65770e2d-3d5e-4371-abc9-0aeca9646885",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain import hub\n",
-    "prompt_hub_rag = hub.pull(\"rlm/rag-prompt\")"
+    "\n",
+    "prompt_hub_rag = ChatPromptTemplate([\n",
+    "    HumanMessagePromptTemplate(\n",
+    "        prompt=PromptTemplate(\n",
+    "            template=\"You are an assistant for question-answering tasks. Use the following pieces of retrieved context to answer the question. If you don't know the answer, just say that you don't know. Use three sentences maximum and keep the answer concise.\\nQuestion: {question} \\nContext: {context} \\nAnswer:\",\n",
+    "            input_variables=[\"context\", \"question\"]\n",
+    "        )\n",
+    "    )    \n",
+    "])"
    ]
   },
   {
@@ -491,7 +576,7 @@
     "    | StrOutputParser()\n",
     ")\n",
     "\n",
-    "rag_chain.invoke(\"What is Task Decomposition?\")"
+    "response = rag_chain.invoke(\"What is Task Decomposition?\")"
    ]
   },
   {
@@ -500,12 +585,22 @@
    "id": "3fb474b9-1e38-4a20-91cc-24cdce6d8631",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77968403",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "rag",
    "language": "python",
    "name": "python3"
   },
@@ -519,7 +614,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
