--- a/rag_from_scratch_01_to_04.ipynb
+++ b/rag_from_scratch_01_to_04.ipynb
@@ -87,7 +87,10 @@
     "from langchain_ollama import ChatOllama, OllamaEmbeddings\n",
     "\n",
     "# NOTE: change this if you are hosting ollama on a different address or port\n",
-    "BASE_URL = \"http://localhost:11434/\""
+    "BASE_URL = \"http://localhost:11434/\"\n",
+    "\n",
+    "# NOTE: change this if you are using a different model\n",
+    "MODEL = \"deepseek-r1\""
    ]
   },
   {
@@ -131,7 +134,7 @@
     "# Embed\n",
     "vectorstore = Chroma.from_documents(documents=splits, \n",
     "                                    embedding=OllamaEmbeddings(\n",
-    "                                        model=\"deepseek-r1\",\n",
+    "                                        model=MODEL,\n",
     "                                        base_url=BASE_URL\n",
     "                                    ))\n",
     "\n",
@@ -178,7 +181,7 @@
     "#### RETRIEVAL and GENERATION ####\n",
     "\n",
     "# LLM\n",
-    "llm = ChatOllama(model=\"deepseek-r1\", temperature=0)\n",
+    "llm = ChatOllama(model=MODEL, base_url=BASE_URL, temperature=0)\n",
     "\n",
     "# Post-processing\n",
     "def format_docs(docs):\n",
@@ -278,7 +281,7 @@
    "outputs": [],
    "source": [
     "from langchain_ollama import OllamaEmbeddings\n",
-    "embd = OllamaEmbeddings(model=\"deepseek-r1\", base_url=BASE_URL)\n",
+    "embd = OllamaEmbeddings(model=MODEL, base_url=BASE_URL)\n",
     "query_result = embd.embed_query(question)\n",
     "document_result = embd.embed_query(document)\n",
     "len(query_result)"
@@ -389,7 +392,7 @@
     "from langchain_community.vectorstores import Chroma\n",
     "vectorstore = Chroma.from_documents(documents=splits, \n",
     "                                    embedding=OllamaEmbeddings(\n",
-    "                                        model='deepseek-r1',\n",
+    "                                        model=MODEL,\n",
     "                                        base_url=BASE_URL\n",
     "                                    ))\n",
     "\n",
@@ -416,7 +419,7 @@
     "from langchain_community.vectorstores import Chroma\n",
     "vectorstore = Chroma.from_documents(documents=splits, \n",
     "                                    embedding=OllamaEmbeddings(\n",
-    "                                        model='deepseek-r1',\n",
+    "                                        model=MODEL,\n",
     "                                        base_url=BASE_URL\n",
     "                                    ))\n",
     "\n",
@@ -488,7 +491,7 @@
    "outputs": [],
    "source": [
     "# LLM\n",
-    "llm = ChatOllama(model=\"deepseek-r1\", temperature=0)"
+    "llm = ChatOllama(model=MODEL, base_url=BASE_URL, temperature=0)"
    ]
   },
   {
